vlib/v/parser/tests/select_bad_key_4.vv
fn f3_bad(ch1 chan int) {
	mut a := 5
	select {
		a = <-ch1 {
			println(b)
		}
		c := -a {
			println("shouldn't get here")
		}
	}
}

fn main() {}
